test pokemon Api

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
     <title>Wbpack Exercise</title>
 </head>
 <body>
-    <h1>Hello webpack!</h1>
+    <h1>Pokemon</h1>
+    <div class="pokemon"></div>
+    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/back/1.png">
 </body>
 </html>
