--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,6 @@
 </head>
 <body>
     <h1>Pokemon</h1>
-    <div class="pokemon"></div>
-    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/back/1.png">
+    <div id="pokemon"></div>
 </body>
 </html>
