--- a/src/index.html
+++ b/src/index.html
@@ -14,5 +14,11 @@
             <div>Type</div>
         </nav>
     </header>
+
+    <div id="pokemon">here comes the pokemons cards</div>
+
+    <footer>
+        Created by Booze33 & SantiagoM under MIT License
+    </footer>
 </body>
 </html>
