--- a/src/index.html
+++ b/src/index.html
@@ -9,13 +9,15 @@
     <header>
         <nav>
             <strong>Pokemon</strong>
-            <div>Pokemons(15)</div>
+            <div>Pokemons(20)</div>
             <div>Description</div>
             <div>Type</div>
         </nav>
     </header>
 
     <div id="pokemon"></div>
+
+    <div id="popContainer"></div>
 
     <footer>
         Created by Booze33 & SantiagoM under MIT License
