Add count function and change style on main

--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,8 @@
 <body>
     <header>
         <nav>
-            <strong>Pokemon</strong>
-            <div>Pokemons(20)</div>
+            <div id="logoContainer"></div>
+            <div id="count">Pokemons()</div>
             <div>Description</div>
             <div>Type</div>
         </nav>
@@ -24,7 +24,8 @@
 
     <div id="pokemon"></div>
     <footer>
-        Created by Booze33 & SantiagoM under MIT License
+        <p>Created by Booze33 & SantiagoM</p>
+        <p class="disclamer">Disclaimer: All Pokemon images used on this page are for educational purposes only. The copyrights for all Pokemon characters and related materials belong to their respective owners.    This website is not affiliated with, endorsed, sponsored, or specifically approved by any company or organization related to the Pokemon franchise. The information presented on this website is for educational purposes only and should not be used for any other purpose. Thank you for visiting and learning more about the wonderful world of Pokemon!</p>
     </footer>
 </body>
 </html>
