Fix mobile version

--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,9 @@
     <header>
         <nav>
             <div id="logoContainer"></div>
-            <div id="count">Pokemons()</div>
-            <div>Description</div>
-            <div>Type</div>
+            <div class="navItem" id="count">Pokemons()</div>
+            <div class="navItem">Description</div>
+            <div class="navItem">Type</div>
         </nav>
     </header>
 
